<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.TimeTableActivity">
    <LinearLayout
        android:id="@+id/id_layout_title_zone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        >
        <ImageButton
            android:id="@+id/id_change_zone_left"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_left_arrow"
            android:background="@null"
            android:layout_marginEnd="8dp"
            />
        <TextView
            android:id="@+id/id_date_timetable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lundi 24.05.2021"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            />
        <ImageButton
            android:id="@+id/id_change_zone_right"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_right_arrow"
            android:background="@null"
            android:layout_marginStart="8dp"
            />
    </LinearLayout>
    <Spinner
        android:id="@+id/id_title_zone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/id_layout_title_zone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <ScrollView
        android:id="@+id/id_scrollview_timetable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/id_title_zone"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/id_timetable_constraintlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="60dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp">

            <TextView
                android:id="@+id/text_heure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/time_name"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>