<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.admin.ZoneManagementActivity"
    android:id="@+id/zone_management_activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-129dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.295">

            <TextView
                android:id="@+id/id_tv_manage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="45dp"
                tools:layout_editor_absoluteY="86dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="0dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/zone_management_name_text"
                    app:boxBackgroundColor="@android:color/transparent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/id_zone_management_name_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:inputType="text"
                        android:paddingStart="20dp"
                        android:paddingEnd="0dp"
                        android:textStyle="bold" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="0dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/zone_management_description_text"
                    app:boxBackgroundColor="@android:color/transparent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/id_zone_management_description_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:inputType="textMultiLine|text"
                        android:paddingStart="20dp"
                        android:paddingEnd="0dp"
                        android:text=""
                        android:textStyle="bold" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="0dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/zone_management_coordinates_text"
                    app:boxBackgroundColor="@android:color/transparent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/id_zone_management_coordinates_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:enabled="false"
                        android:inputType="text"
                        android:paddingStart="20dp"
                        android:paddingEnd="0dp"
                        android:textStyle="bold" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="0dp">

                <Button
                    android:id="@+id/id_btn_modify_coordinates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_modify_coord_update_text"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/id_btn_delete_coordinates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/btn_delete_coord_text"
                    tools:ignore="ButtonStyle" />


            </LinearLayout>

            <Button
                android:id="@+id/id_btn_manage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="108dp" />


        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/id_framelayout_map_edit_zone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:visibility="invisible">

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>