<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_fragment_home_admin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.home.AdminHomeFragment">

    <ScrollView
        android:id="@+id/scrollView2"
...
                    android:textColor="@color/primary_variant"
                    app:strokeColor="@color/primary_variant"
                    app:strokeWidth="2dp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/id_zone_management_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:drawableTop="@drawable/ic_place"
                    android:drawableTint="@color/primary_variant"
                    android:gravity="center"
...
