<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/ic_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_menu_home"/>

    <item
        android:id="@+id/ic_map"
        android:icon="@drawable/ic_pin"
        android:title="@string/nav_menu_map"/>

    <item
        android:id="@+id/ic_list"
        android:icon="@drawable/ic_list"
        android:title="@string/nav_menu_events"/>

    <item
        android:id="@+id/ic_login"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_menu_profile"/>

    <item
        android:id="@+id/ic_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/nav_menu_settings" />
</menu>